Read clinical trials for MongoDB

--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -15,7 +15,7 @@
           <a class="navbar-brand" href="/">Node Tutorial</a>
           </div>
           <ul class="nav navbar-nav navbar-right">
-		  <li><a href="/about">About </a></li>
+		  <li><a href="/clinical_trials">Clinical Trial </a></li>
 		  <li><a href="/Log In">Log In </a></li>
           </ul>
         </div>
