--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -5,6 +5,8 @@
         <meta charset="utf-8">
         <title>Node Tutorial</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
     </head>
 
 
@@ -15,7 +17,7 @@
           <a class="navbar-brand" href="/">Node Tutorial</a>
           </div>
           <ul class="nav navbar-nav navbar-right">
-		  <li><a href="/clinical_trials">Clinical Trial </a></li>
+		  <li><a href="/clinical_trial">Clinical Trial </a></li>
 		  <li><a href="/Log In">Log In </a></li>
           </ul>
         </div>
