--- a/views/clinical_trial.ejs
+++ b/views/clinical_trial.ejs
@@ -8,7 +8,7 @@
             <h3>Clinical Trial</h3>
         </div>
         <div class="panel-body">
-            <form class="form-signin" method="POST" action="/clinical_trial">
+            <form id="CTForm" class="form-signin" method="POST" action="/clinical_trial">
                 <div class="input-group">
                     <span class="input-group-addon" id="basic-addon1">@</span>
                     <input type="text" class="form-control" placeholder="Condition" name="condition" aria-describedby="basic-addon1">
@@ -19,6 +19,7 @@
                     <input type="text" class="form-control" placeholder="Country" name="country"
                         aria-describedby="basic-addon1">
                 </div>
+                <div> <p id="result"></p></div>
 
                 <input type="submit" class="btn btn-default navbar-btn" value="Submit" />
 
@@ -26,6 +27,26 @@
         </div>
     </div>
 </div>
+<script>
+
+          const $form = $('#CTForm')
+          const $par = $('#result')
+
+          $form.on('submit', submitHandler)
+          function submitHandler (e) {
+            e.preventDefault()
+            console.log('mpika')
+            $.ajax({
+                 url: '/clinical_trial',
+                 type:'POST',
+                 data: $form.serialize(),
+                 dataType: 'json'
+            }).done(function (ret_data) {
+               console.log(ret_data);
+               $par.text("result: "+ ret_data.result);
+            })
+           }
+        </script>
 
 <%- include('_footer'); -%>
 
