Add background image to the Web app

--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -3,8 +3,9 @@
     <html>
     <head>
         <meta charset="utf-8">
-        <title>Node Tutorial</title>
+        <title>Appathon Clinical Trials</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="/css/style.css" />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
     </head>
@@ -14,11 +15,10 @@
     <div class="navbar navbar-default navbar-static-top" role="navigation">
         <div class="container">
           <div class="navbar-header">
-          <a class="navbar-brand" href="/">Node Tutorial</a>
+          <a class="navbar-brand" href="/">Home</a>
           </div>
           <ul class="nav navbar-nav navbar-right">
 		  <li><a href="/clinical_trial">Clinical Trial </a></li>
-		  <li><a href="/Log In">Log In </a></li>
           </ul>
         </div>
     </div>
