--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <%- include('_header'); -%>
-    <h1>Welcome to my new app</h1>
+    <h1 style="float:right;color:white;">Appathon Clinical Trials</h1>
 
 <%- include('_footer'); -%>
 
